--- a/plexem.html
+++ b/plexem.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://unpkg.com/xterm@5.3.0/css/xterm.css" />
+    <link rel="stylesheet" href="xterm/css/xterm.css" />
   </head>
   <body>
     <div id="terminal"></div>
     <script type="module">
-      import 'https://unpkg.com/xterm@5.3.0/lib/xterm.js';
-      import 'https://unpkg.com/xterm-pty/index.js';
+      import 'xterm/lib/xterm.js';
+      import 'xterm-pty/index.js';
       import initEmscripten from './plexem.mjs';
 
       var xterm = new Terminal();
