Add caching for emsdk

--- a/plexem.html
+++ b/plexem.html
@@ -6,8 +6,8 @@
   <body>
     <div id="terminal"></div>
     <script type="module">
-      import 'xterm/lib/xterm.js';
-      import 'xterm-pty/index.js';
+      import './xterm/lib/xterm.js';
+      import './xterm-pty/index.js';
       import initEmscripten from './plexem.mjs';
 
       var xterm = new Terminal();
