Swap around DEL/BS inputs, some text rewordings

--- a/plexem.html
+++ b/plexem.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="xterm/css/xterm.css" />
     <link rel="stylesheet" href="plexem.css" />
+    <title>Plexus P/20 emulator</title>
   </head>
   <body>
     <div id="terminal"></div>
@@ -58,13 +59,13 @@
 		<li>If you're at the 'PLEXUS PRIMARY BOOT REV 1.2' prompt, the Plexus is waiting for you to do something. Try pressing enter to boot Unix.</li>
 		<li>If you run 'init 2', you need to login. Try user 'root' with no password.</li>
 		<li>If you get weird colored blocks in the terminal, please allow using canvas image data for this site. There probably is an icon for that in the address bar.</li>
-		<li>Hard disk changes are changed to local storage in your browser. Changing computers or browsers will clear it.</li>
+		<li>Hard disk changes are saved to local storage in your browser. Changing computers or browsers will clear it.</li>
 		</ul>
 		<button id="closefaq">Close</button>
 	</dialog>
 	<dialog id="about">
 		<p>
-		This is an emulator for a Plexus P/20 system, which is an Unix workstation from the '80's. It
+		This is an emulator for a Plexus P/20 system, which is an Unix server from the '80's. It
 		runs SystemV Unix on a dual 68010 processor mainboard. Adrian Black 
 		(from Adrian's Digital Basement) did some videos on the topic of getting one to work:
 		<a href="https://www.youtube.com/watch?v=iltZYXg5hZw">1</a>
