Small commandline fix

--- a/plexem.html
+++ b/plexem.html
@@ -59,7 +59,7 @@
 		<li>If you're at the 'PLEXUS PRIMARY BOOT REV 1.2' prompt, the Plexus is waiting for you to do something. Try pressing enter to boot Unix.</li>
 		<li>If you run 'init 2', you need to login. Try user 'root' with no password.</li>
 		<li>If you get weird colored blocks in the terminal, please allow using canvas image data for this site. There probably is an icon for that in the address bar.</li>
-		<li>Hard disk changes are saved to local storage in your browser. Changing computers or browsers will clear it.</li>
+		<li>Hard disk changes are saved to local storage in your browser. Changing computers or browsers will clear it. Your browser may also clear the storage when it's unused for a long time or your (physical) machine is running low on hard disk space.</li>
 		</ul>
 		<button id="closefaq">Close</button>
 	</dialog>
